# android_device_xiaomi_spes

./: Android.bp  Android.mk  AndroidProducts.mk  BoardConfig.mk  README.md  arrow_spes.mk  board-info.txt  device.mk  extract-files.sh  lineage_spes.mk  nad_spes.mk  product.prop  proprietary-files.txt  releasetools.py  reorder-libs.py  setup-makefiles.sh  system.prop  system_ext.prop  vendor.prop  vendorsetup.sh
bluetooth/include/: bdroid_buildcfg.h
bootctrl/: Android.bp
configs/: msm_irqbalance.conf  powerhint.json  public.libraries.txt  task_profiles.json
configs/audio/: audio_effects.xml  audio_io_policy.conf  audio_platform_info_intcodec.xml  audio_policy_configuration.xml  mixer_paths.xml  mixer_paths_idp_india.xml  mixer_paths_qrd.xml  mixer_paths_scubaidp.xml  mixer_paths_scubaqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_platform_info.xml
configs/hidl/: framework_compatibility_matrix-lineage.xml  framework_compatibility_matrix.xml  manifest-lineage.xml  manifest.xml  manifest_k7tn.xml  manifest_nfc.xml
configs/keylayout/: uinput-goodix.kl  uinput-silead.kl
configs/media/: media_codecs.xml  media_codecs_performance.xml  media_codecs_performance_v2.xml  media_codecs_performance_v3.xml  media_codecs_vendor.xml  media_codecs_vendor_audio.xml  media_codecs_vendor_v1.xml  media_codecs_vendor_v2.xml  media_codecs_vendor_v3.xml  media_profiles_khaje.xml  media_profiles_scuba.xml  media_profiles_vendor.xml  system_properties.xml
configs/perf/: commonsysnodesconfigs.xml  perfboostsconfig.xml  perfconfigstore.xml  targetconfig.xml  targetresourceconfigs.xml
configs/permissions/: privapp-permissions-google-hotword.xml
configs/wifi/: WCNSS_qcom_cfg.ini  wpa_supplicant_overlay.conf
fingerprint/: Android.bp  BiometricsFingerprint.cpp  BiometricsFingerprint.h  android.hardware.biometrics.fingerprint@2.1-service.rc  android.hardware.biometrics.fingerprint@2.1-service.spes.rc  service.cpp
gpt-utils/: Android.bp  gpt-utils.cpp  gpt-utils.h
hals/: Android.bp
hals/audio/: Android.mk  configure.ac
hals/audio/hal/: Android.mk  Makefile.am  acdb.c  audio_hw.c  audio_hw.h  audio_perf.cpp  audio_perf.h  platform_api.h  platform_info.c
hals/audio/post_proc/: Android.mk
hals/audio/qahw/: Android.mk
hals/display/: Android.bp  Android.mk  CleanSpec.mk  Makefile.am  common.mk  configure.ac
hals/display/libdebug/: Android.mk  Makefile.am  debug_handler.cpp  debug_handler.h
hals/display/libdrmutils/: Android.mk  Makefile.am  drm_interface.h  drm_logger.h  drm_master.cpp  drm_master.h
hals/display/libqdutils/: Android.bp  Makefile.am  display_config.cpp  display_config.h  qd_utils.cpp  qd_utils.h
hals/display/libqservice/: Android.bp  IQService.h  Makefile.am  QServiceUtils.h
hals/display/sde-drm/: Android.mk  Makefile.am  drm_atomic_req.cpp  drm_atomic_req.h  drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_dpps_mgr_imp.cpp  drm_dpps_mgr_imp.h  drm_dpps_mgr_intf.h  drm_encoder.cpp  drm_encoder.h  drm_manager.cpp  drm_manager.h  drm_panel_feature_mgr.cpp  drm_panel_feature_mgr.h  drm_panel_feature_mgr_intf.h  drm_plane.cpp  drm_plane.h  drm_pp_manager.cpp  drm_pp_manager.h  drm_property.cpp  drm_property.h  drm_utils.cpp  drm_utils.h
hals/display/sdm/libs/core/: Android.mk  Makefile.am  color_manager.cpp  color_manager.h  comp_manager.cpp  comp_manager.h  core_impl.cpp  core_impl.h  core_interface.cpp  display_base.cpp  display_base.h  display_builtin.cpp  display_builtin.h  display_pluggable.cpp  display_pluggable.h  display_virtual.cpp  display_virtual.h  hw_events_interface.cpp  hw_events_interface.h  hw_info_interface.cpp  hw_info_interface.h  hw_interface.cpp  hw_interface.h  resource_default.cpp  resource_default.h  strategy.cpp  strategy.h
hals/display/sdm/libs/core/drm/: hw_color_manager_drm.cpp  hw_color_manager_drm.h  hw_device_drm.cpp  hw_device_drm.h  hw_events_drm.cpp  hw_events_drm.h  hw_info_drm.cpp  hw_info_drm.h  hw_peripheral_drm.cpp  hw_peripheral_drm.h  hw_scale_drm.cpp  hw_scale_drm.h  hw_tv_drm.cpp  hw_tv_drm.h  hw_virtual_drm.cpp  hw_virtual_drm.h
hals/display/sdm/libs/core/fb/: hw_info.cpp  hw_info.h
hals/media/: Android.mk  Makefile.am  configure.ac  product.mk
hals/media/libc2dcolorconvert/: Android.mk  C2DColorConverter.cpp  C2DColorConverter.h  Makefile.am
hals/media/libplatformconfig/: Android.mk  ConfigParser.cpp  ConfigParser.h  ConfigStore.cpp  ConfigStore.h  Makefile.am  PlatformConfig.cpp  PlatformConfig.h
hals/media/mm-video-v4l2/vidc/venc/: Android.mk  Makefile.am
hals/media/mm-video-v4l2/vidc/venc/inc/: fastcv.h  omx_swvenc_mpeg4.h  omx_video_base.h  omx_video_common.h  omx_video_encoder.h  video_encoder_device_v4l2.h
hals/media/mm-video-v4l2/vidc/venc/src/: omx_swvenc_mpeg4.cpp  omx_video_base.cpp  omx_video_encoder.cpp  omx_video_extensions.hpp  video_encoder_device_v4l2.cpp  video_encoder_device_v4l2_params.cpp
libinit/: Android.bp  init_xiaomi_spes.cpp  libinit_variant.cpp
libinit/include/: libinit_variant.h
lights/: Android.bp  Lights.cpp  Lights.h  lights-spes.rc
parts/: AndroidManifest.xml  proguard.flags
patches/: custom-display-commonsys-intf.patch
power/: power-mode.cpp
remove_packages/: Android.mk
rootdir/: Android.bp  Android.mk
rootdir/etc/: fstab.emmc  fstab.qcom  fstab.zram  init.qcom.power.rc  init.qcom.rc  init.qcom.usb.rc  init.recovery.qcom.rc  init.stnfc.rc  init.target.rc  ueventd.qcom.rc
rro_overlays/CarrierConfigOverlay/: AndroidManifest.xml
sepolicy/private/: cameraserver.te  devicesettings_app.te  dontaudit.te  property_contexts  system_suspend.te
sepolicy/private-cr/: recovery.te
sepolicy/public/: attributes  property.te
sepolicy/vndr/: SEPolicy.mk
usb/: Android.bp  Usb.cpp  Usb.h  UsbGadget.cpp  UsbGadget.h  android.hardware.usb.gadget@1.0-service-qti.rc  android.hardware.usb.gadget@1.0-service-spes.rc  android.hardware.usb.gadget@1.0-service-spes.xml  android.hardware.usb@1.2-service-spes.rc  android.hardware.usb@1.3-service-qti.rc  android.hardware.usb@1.3-service-spes.rc  android.hardware.usb@1.3-service.xml
(+264 files in other folders)
